--- a/html_files/styles.css
+++ b/html_files/styles.css
@@ -1,12 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 button {
   cursor: pointer;
+  background-color: #5282b2;
+  color: white;
+}
+
+select {
+  font-family: "Josefin Sans", sans-serif;
 }
 
 h1 {
-  color: #e5beec;
+  font-family: "Josefin Sans", sans-serif;
+  color: #000000;
   text-size: 2em;
   font-weight: 100;
 }
@@ -22,7 +31,7 @@ div#main {
 }
 div#side-bar {
   text-align: center;
-  background-color: #5d3891;
+  background-color: #040323;
   border: none;
   border-radius: 5px;
   width: 250px;
@@ -31,20 +40,38 @@ div#side-bar {
 }
 
 button.sidebar-btn {
+  font-family: "Josefin Sans", sans-serif;
   background-color: transparent;
   border: none;
-  outline: 4px solid #533281;
+  outline: 4px solid #ffffff;
   border-radius: 5px;
   color: white;
   padding: 10px;
   margin: 20px;
 }
+
+button.sidebar-btn:hover {
+  background-color: #a7eaff;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  color: #000000;
+}
+
+button.sidebar-btn:active {
+  opacity: 0.5;
+}
+
 button.sidebar-btn:disabled {
-  background-color: #533281;
+  background-color: #a7eaff;
   cursor: default;
+  color: #000000;
 }
 
 div#body {
+  font-family: "Josefin Sans", sans-serif;
+  background-image: url("https://getwallpapers.com/wallpaper/full/2/e/4/863043-top-wallpaper-for-computer-background-2560x1600.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   background-color: #5d3891;
   padding: 20px;
   border: none;
@@ -75,33 +102,39 @@ div.grid-container {
   height: 100%;
 }
 div#question-box {
-  padding: 10px;
+  font-family: "Josefin Sans", sans-serif;
+  padding: 20px;
   text-align: left;
-  background-color: #533281;
+  background-color: #a7eaff;
   border: none;
   border-radius: 5px;
   margin-right: 30px;
   display: grid;
   grid-template-columns: 50% 50%;
-  height: 100%;
-  margin-bottom: 20px;
+  color: black;
+  opacity: 0.9;
 }
 
 div#question-btn-menu {
+  font-family: "Josefin Sans", sans-serif;
   margin-left: auto;
   margin-right: 0;
 }
 
 div#question-btn-menu > button {
-  height: 100%;
-  background-color: #533281;
-  border: 4px solid #5d3891;
+  font-family: "Josefin Sans", sans-serif;
+  background-color: #5282b2;
+  border: 1px solid #ffffff;
   outline: none;
   border-radius: 5px;
   color: white;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 10px 20px 10px 20px;
   margin-left: 10px;
+}
+
+div#question-btn-menu > button:hover {
+  background-color: #183a7a;
+  transition: all 0.3s ease 0s;
 }
 
 div#code-box {
@@ -119,27 +152,30 @@ div#code-box > textarea {
   height: 100%;
   border: none;
   border-radius: 7px;
-  background-color: #000;
-  color: #fff;
+  background-color: #ffffff;
+  color: #000000;
   resize: none;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Josefin Sans", sans-serif;
   font-size: 1.1em;
 }
 div#answers-box {
+  font-family: "Josefin Sans", sans-serif;
   padding: 10px;
   text-align: left;
-  background-color: #533281;
+  background-color: #a7eaff;
   border: none;
   border-radius: 5px;
   display: grid;
   grid-template-columns: 50% 50%;
   margin-right: 30px;
   margin-top: 20px;
+  opacity: 0.9;
 }
 div#answers-box > button {
+  font-family: "Josefin Sans", sans-serif;
   padding: 20px;
   margin: 10px;
-  background-color: #f99417;
+  background-color: #5282b2;
   border: none;
   border-radius: 5px;
   font-size: 1.5em;
@@ -147,10 +183,16 @@ div#answers-box > button {
   font-weight: bold;
   white-space: normal;
 }
+
+div#answers-box > button:hover {
+  background-color: #183a7a;
+  transition: all 0.3s ease 0s;
+}
+
 div#progress-box {
   padding: 20px;
   text-align: left;
-  background-color: #533281;
+  background-color: #040323;
   border: none;
   border-radius: 5px;
   margin-bottom: 30px;
@@ -158,8 +200,10 @@ div#progress-box {
   display: flex;
   flex-direction: row;
   height: fit-content;
+  opacity: 0.8;
 }
 span#question-text {
+  font-family: "Josefin Sans", sans-serif;
   font-size: 1.3em;
   font-weight: 100;
 }
@@ -168,15 +212,19 @@ span#question-text {
   width: 25px;
   height: 25px;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: white;
   margin-right: 20px;
   padding: 10px;
 }
 
 .end-game {
-  margin: 0 auto;
-  font-size: 3em;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 50px;
+  color: white;
+  text-align: center;
+  background-color: #03031b;
+  opacity: 0.9;
 }
 .form-container {
   height: 100%;
@@ -194,8 +242,10 @@ span#question-text {
   flex: 1;
   padding-left: 20px;
   width: 100%;
-  background-color: #533281;
+  background-color: #03031b;
   padding: 20px;
+  opacity: 0.9;
+  color: white;
 }
 
 .bottom-row {
@@ -238,10 +288,12 @@ span#question-text {
   padding: 10px;
   border: none;
   border-radius: 15px;
-  background-color: #4caf50;
+  background-color: #a7eaff;
   color: #000000;
   text-align: center;
   cursor: pointer;
+  margin: 20px 10px 0px 0px;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .form-container .start-btn {
@@ -256,7 +308,7 @@ span#question-text {
 }
 
 .form-container .submit-button:hover {
-  background-color: #45a049;
+  opacity: 0.8;
 }
 
 .form-container .columns {
@@ -273,38 +325,59 @@ span#question-text {
   padding: 20px;
   display: flex;
   flex-direction: column;
-
   align-items: left;
   height: fit-content;
-  background-color: #533281;
+  background-color: #a7eaff;
   border-radius: 10px;
   width: 100%;
+  color: black;
 }
 select#choose-difficulty {
-  border: 4px solid #5d3891;
+  border: 2px solid #000000;
   border-radius: 5px;
   background-color: transparent;
   width: 200px;
   height: 45px;
-  color: white;
+  color: black;
   margin-bottom: 10px;
 }
 
 select#choose-difficulty > option {
-  background-color: #5d3891;
+  background-color: #a7eaff;
 }
 
 .start-btn {
-  background-color: #5d3891;
+  margin-top: 10px;
+  background-color: #5282b2;
   border: none;
   border-radius: 5px;
   height: 45px;
   color: white;
+  font-family: "Josefin Sans", sans-serif;
   font-weight: bold;
   font-size: 14px;
+  position: relative;
+}
+
+.start-btn:hover {
+  animation: wiggle 0.5s;
+  cursor: pointer;
+}
+
+@keyframes wiggle {
+  0% {
+    left: 0;
+  }
+  50% {
+    left: 5px;
+  }
+  100% {
+    left: 0;
+  }
 }
 
 #error-msg-box {
+  font-family: "Josefin Sans", sans-serif;
   font-size: 11px;
   font-weight: 100;
 }
@@ -313,41 +386,58 @@ select#choose-difficulty > option {
   font-weight: 100;
   height: fit-content;
   line-height: 1.5;
-  color: #ffff;
   text-align: left;
   padding: 20px;
   border-radius: 10px;
-  background-color: #533281;
+  background-color: #a7eaff;
+  color: black;
+  opacity: 0.9;
+  font-size: 14px;
 }
 
 .headline {
   margin-bottom: 20px;
-  color: purple;
+  color: cyan;
 }
 
-.element {
-  background-color: #533281;
+.home-view-div {
+  background-color: #03031b;
+  border: 2px solid white;
   color: white;
+  opacity: 0.9;
   width: stretch;
-  margin-right: 30px;
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-radius: 10px;
+  height: fit-content;
+  font-size: 16px;
 }
 
-#home-stats {
-  height: 250px;
+.trophy-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px;
 }
-#home-leader {
-  height: 250px;
+
+.trophy {
+  width: 120px;
+  border: 4px solid #5d3891;
+  border-radius: 5px;
+  line-height: 15px;
+  padding-left: 10px;
 }
 
 .questionAdd-config {
   padding: 20px;
   flex-direction: column;
-
+  color: white;
   align-items: left;
   height: fit-content;
-  background-color: #533281;
+  background-color: #03031b;
   border-radius: 5px;
   width: 50%;
+  opacity: 0.9;
 }
