--- a/html_files/styles.css
+++ b/html_files/styles.css
@@ -39,6 +39,30 @@ div#side-bar {
   flex-direction: column;
 }
 
+div#side-bar > input {
+  margin: 20px;
+  background-color: transparent;
+  outline: 4px solid #ffffff;
+  border-radius: 5px;
+  color: white;
+  padding: 10px;
+  height: 25px;
+}
+
+button.wrong-privilage-btn {
+  font-family: "Josefin Sans", sans-serif;
+  background-color: transparent;
+  border: none;
+  outline: 4px solid #ffffff3a;
+  border-radius: 5px;
+  color: #ffffff3a;
+  padding: 10px;
+  margin: 20px;
+  transition: all 0.3s ease 0s;
+  opacity: 0.9;
+  cursor: default;
+}
+
 button.sidebar-btn {
   font-family: "Josefin Sans", sans-serif;
   background-color: transparent;
@@ -48,6 +72,7 @@ button.sidebar-btn {
   color: white;
   padding: 10px;
   margin: 20px;
+  transition: all 0.3s ease 0s;
 }
 
 button.sidebar-btn:hover {
@@ -130,6 +155,7 @@ div#question-btn-menu > button {
   color: white;
   padding: 10px 20px 10px 20px;
   margin-left: 10px;
+  transition: all 0.3s ease 0s;
 }
 
 div#question-btn-menu > button:hover {
@@ -139,49 +165,54 @@ div#question-btn-menu > button:hover {
 
 div#code-box {
   text-align: left;
-  background-color: #533281;
+  background-color: transparent;
   border: none;
   border-radius: 5px;
   margin-right: 20px;
   margin-bottom: 20px;
-  margin-top: 20px;
 }
 div#code-box > textarea {
+  opacity: 0.9;
   padding: 10px;
   width: 100%;
   height: 100%;
-  border: none;
+  border: 1px solid #5282b2;
   border-radius: 7px;
-  background-color: #ffffff;
-  color: #000000;
+  background-color: #040323;
+  color: #fff;
   resize: none;
   font-family: "Josefin Sans", sans-serif;
   font-size: 1.1em;
 }
 div#answers-box {
   font-family: "Josefin Sans", sans-serif;
-  padding: 10px;
   text-align: left;
   background-color: #a7eaff;
   border: none;
   border-radius: 5px;
-  display: grid;
-  grid-template-columns: 50% 50%;
+  display: flex;
+  flex-wrap: wrap;
   margin-right: 30px;
-  margin-top: 20px;
   opacity: 0.9;
+  column-gap: 20px;
+  row-gap: 10px;
+  padding: 20px;
 }
 div#answers-box > button {
   font-family: "Josefin Sans", sans-serif;
-  padding: 20px;
-  margin: 10px;
+  margin: 0;
+  width: 275px;
+  max-height: 95px;
+  min-height: 95px;
+  margin-bottom: -20px;
   background-color: #5282b2;
   border: none;
   border-radius: 5px;
-  font-size: 1.5em;
+  font-size: 1.3em;
   color: #fff;
   font-weight: bold;
   white-space: normal;
+  transition: all 0.3s ease 0s;
 }
 
 div#answers-box > button:hover {
@@ -193,7 +224,7 @@ div#progress-box {
   padding: 20px;
   text-align: left;
   background-color: #040323;
-  border: none;
+  border: 1px solid #a7eaff;
   border-radius: 5px;
   margin-bottom: 30px;
   margin-right: 30px;
@@ -322,6 +353,7 @@ span#question-text {
 }
 
 .game-config {
+  opacity: 0.9;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -368,8 +400,14 @@ select#choose-difficulty > option {
   0% {
     left: 0;
   }
-  50% {
+  25% {
     left: 5px;
+  }
+  50% {
+    left: 0;
+  }
+  75% {
+    right: 5px;
   }
   100% {
     left: 0;
@@ -402,7 +440,7 @@ select#choose-difficulty > option {
 
 .home-view-div {
   background-color: #03031b;
-  border: 2px solid white;
+  border: 1px solid #a7eaff;
   color: white;
   opacity: 0.9;
   width: stretch;
@@ -413,6 +451,27 @@ select#choose-difficulty > option {
   border-radius: 10px;
   height: fit-content;
   font-size: 16px;
+  line-height: 20px;
+}
+
+#home-leader {
+  margin-right: 30px;
+  height: 305px;
+}
+.leaderboard-user {
+  width: stretch;
+  border: 4px solid #5d3891;
+  border-radius: 5px;
+  line-height: 15px;
+  padding-left: 10px;
+  display: flex;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.leaderboard-points {
+  margin-left: auto;
+  margin-right: 10px;
 }
 
 .trophy-container {
@@ -440,4 +499,11 @@ select#choose-difficulty > option {
   border-radius: 5px;
   width: 50%;
   opacity: 0.9;
+}
+
+.button.sidebar-btn:disabled {
+  background-color: #ccc;
+  color: #999;
+  cursor: not-allowed;
+  pointer-events: none;
 }
