--- a/html_files/styles.css
+++ b/html_files/styles.css
@@ -265,8 +265,15 @@ span#question-text {
 }
 
 .left-column {
-  flex: 1;
-  padding-right: 20px;
+  padding: 20px;
+  flex-direction: column;
+  color: white;
+  align-items: left;
+  height: fit-content;
+  background-color: #03031b;
+  border-radius: 5px;
+  width: 50%;
+  opacity: 0.9;
 }
 
 .right-column {
@@ -309,6 +316,7 @@ span#question-text {
 .form-container .radio-container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
   margin-bottom: 10px;
 }
@@ -489,21 +497,15 @@ select#choose-difficulty > option {
   padding-left: 10px;
 }
 
-.questionAdd-config {
-  padding: 20px;
-  flex-direction: column;
-  color: white;
-  align-items: left;
-  height: fit-content;
-  background-color: #03031b;
-  border-radius: 5px;
-  width: 50%;
-  opacity: 0.9;
+.update-container {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
 }
-
 .button.sidebar-btn:disabled {
   background-color: #ccc;
   color: #999;
   cursor: not-allowed;
   pointer-events: none;
 }
+
